@@ -1,6 +1,7 @@
 # Offpunk History
 
 ## 1.8 - Unreleased
+- Add support for the finger protocol (by Sotiris Papatheodorou)
 - "set accept_bad_ssl_certificates True" allows to lower HTTPS SSL requirements 
 - Accept "localhost" as a valid URL
 - Better feedback when --sync an URL which is streaming
